# internal/service/handler/movie.go
@@ -2,6 +2,8 @@ package handler
 
 import (
 	"application/internal/service"
+	"application/internal/service/dto"
+	"application/internal/service/response"
 	"log/slog"
 	"net/http"
 )
@@ -23,4 +25,62 @@ func (s *MovieHandler) RegisterMuxRouter(mux *http.ServeMux) {
 	mux.HandleFunc("GET /api/v3/content/v2/movies/{movie_id}", service.NotImplemented)
 	mux.HandleFunc("GET /api/v3/content/v2/movies/{movie_id}/similar", service.NotImplemented)
 
+}
+
+// Get list of movies
+//
+//	@Summary		Get list of movies
+//	@Description	Fetch a list of movies
+//	@Tags			Movies
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	dto.MovieListResponse
+//	@Failure		500	{object}	response.Response[string]
+//	@Router			/api/v3/content/v2/movies [get]
+func (s *MovieHandler) GetMovies(w http.ResponseWriter, r *http.Request) {
+	s.logger.Info("GetMovies called")
+	// Implementation for fetching movies would go here
+	_ = new(dto.MovieListResponse)
+	_ = new(response.Response[any])
+	http.Error(w, "Not Implemented", http.StatusNotImplemented)
+}
+
+// GetMovieByID retrieves a movie by its ID
+//
+//	@Summary		Get a movie by ID
+//	@Description	Fetch a movie by its ID
+//	@Tags			Movies
+//	@Accept			json
+//	@Produce		json
+//	@Param			movie_id	path		uint64	true	"Movie ID"
+//	@Success		200			{object}	dto.Movie
+//	@Failure		404			{object}	response.Response[string]
+//	@Failure		500			{object}	response.Response[string]
+//	@Router			/api/v3/content/v2/movies/{movie_id} [get]
+func (s *MovieHandler) GetMovieByID(w http.ResponseWriter, r *http.Request) {
+	s.logger.Info("GetMovieByID called")
+	// Implementation for fetching a movie by ID would go here
+	_ = new(dto.Movie)
+	_ = new(response.Response[any])
+	http.Error(w, "Not Implemented", http.StatusNotImplemented)
+}
+
+// GetSimilarMovies retrieves similar movies to a given movie ID
+//
+//	@Summary		Get similar movies
+//	@Description	Fetch similar movies based on a given movie ID
+//	@Tags			Movies
+//	@Accept			json
+//	@Produce		json
+//	@Param			movie_id	path		uint64	true	"Movie ID"
+//	@Success		200			{object}	dto.MovieListResponse
+//	@Failure		404			{object}	response.Response[string]
+//	@Failure		500			{object}	response.Response[string]
+//	@Router			/api/v3/content/v2/movies/{movie_id}/similar [get]
+func (s *MovieHandler) GetSimilarMovies(w http.ResponseWriter, r *http.Request) {
+	s.logger.Info("GetSimilarMovies called")
+	// Implementation for fetching similar movies would go here
+	_ = new(dto.MovieListResponse)
+	_ = new(response.Response[any])
+	http.Error(w, "Not Implemented", http.StatusNotImplemented)
 }
